--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h2 class="u-align-center u-text u-text-palette-4-dark-1 u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">Hori Bot-Md</h2>
             <p class="u-align-center u-custom-font u-font-courier-new u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000">Open Source Whatsapp Bot&nbsp;<br>Made By Sachu-Settan And Saran-Kuttan<br>with Use Of Baileys Librarys<br>
             </p>
-            <a href="htpps://github.com/Sachu-Settan/Hori-Beta" class="u-active-palette-4-light-2 u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-open-sans u-hover-palette-4-light-1 u-palette-4-base u-radius-50 u-text-black u-text-hover-black u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1000">Github</a>
+            <a href="https://github.com/Sachu-Settan/Hori-Beta" class="u-active-palette-4-light-2 u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-open-sans u-hover-palette-4-light-1 u-palette-4-base u-radius-50 u-text-black u-text-hover-black u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1000">Github</a>
           </div>
         </div>
         <div class="u-shape u-shape-svg u-text-palette-4-base u-shape-2" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-delay="500">
@@ -132,7 +132,7 @@
             <h4 class="u-align-center u-custom-font u-text u-text-palette-4-base u-text-1"> Saran</h4>
             <p class="u-align-center u-text u-text-2"> Main Commiter,Base Editor,<br>Contributor,Re-Devoloper&nbsp;
             </p>
-            <a href="https://sachu-settan.github.io" class="u-active-palette-4-light-1 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-50 u-text-black u-text-hover-black u-btn-1">Web</a>
+            <a href="https://saran-kuttan.github.io" class="u-active-palette-4-light-1 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-50 u-text-black u-text-hover-black u-btn-1">Web</a>
           </div>
         </div>
       </div>
